@startuml HealVerse_Database_ERD
!define ENTITY entity
!define PK <color:red><b>PK</b></color>
!define FK <color:blue><b>FK</b></color>
!define UK <color:green><b>UK</b></color>

skinparam linetype ortho
skinparam packageStyle rectangle

entity "users" as users {
  * id : BIGINT PK
  * username : VARCHAR(255) UK
  password : VARCHAR(255)
  email : VARCHAR(255) UK
  google_id : VARCHAR(255) UK
  profile_image : VARCHAR(255)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "user_profiles" as user_profiles {
  * id : BIGINT PK
  * user_id : BIGINT FK
  * gender : ENUM
  * age : INT
  * height_cm : DECIMAL(5,2)
  * current_weight_kg : DECIMAL(5,2)
  * target_weight_kg : DECIMAL(5,2)
  * activity_level : ENUM
  * goal : ENUM
  weight_loss_speed : ENUM
  dietary_restriction : ENUM
  health_conditions : ENUM
  other_health_condition_description : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "conversations" as conversations {
  * id : VARCHAR(255) PK
  * user_id : BIGINT FK
  title : VARCHAR(500)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "messages" as messages {
  * id : BIGINT PK
  * conversation_id : VARCHAR(255) FK
  * content : TEXT
  * role : ENUM
  created_at : TIMESTAMP
}

entity "diet_plans" as diet_plans {
  * id : BIGINT PK
  * user_id : BIGINT FK
  * plan_date : DATE
  * total_calories : DECIMAL(6,2)
  * total_protein : DECIMAL(5,2)
  * total_carbs : DECIMAL(5,2)
  * total_fat : DECIMAL(5,2)
  is_generated : BOOLEAN
  created_at : TIMESTAMP
}

entity "meals" as meals {
  * id : BIGINT PK
  * diet_plan_id : BIGINT FK
  * meal_type : ENUM
  * meal_name : VARCHAR(255)
  * calories : DECIMAL(6,2)
  * protein : DECIMAL(5,2)
  * carbs : DECIMAL(5,2)
  * fat : DECIMAL(5,2)
  preparation_time_minutes : INT
  instructions : TEXT
  health_benefits : TEXT
  ingredients : JSON
  created_at : TIMESTAMP
}

entity "food_logs" as food_logs {
  * id : BIGINT PK
  * user_id : BIGINT FK
  * meal_type : ENUM
  meal_name : VARCHAR(255)
  image_url : VARCHAR(255)
  image_description : TEXT
  * logged_at : TIMESTAMP
  created_at : TIMESTAMP
  is_from_camera : BOOLEAN
}

entity "food_items" as food_items {
  * id : BIGINT PK
  * food_log_id : BIGINT FK
  * name : VARCHAR(255)
  * quantity : DOUBLE
  * unit : VARCHAR(50)
  * calories : DOUBLE
  * protein : DOUBLE
  * fat : DOUBLE
  * carbs : DOUBLE
}

entity "exercise_logs" as exercise_logs {
  * id : BIGINT PK
  * user_id : BIGINT FK
  * exercise_name : VARCHAR(255)
  * duration_minutes : INT
  * intensity : ENUM
  * calories_burned : DECIMAL(6,2)
  * logged_at : TIMESTAMP
  created_at : TIMESTAMP
}

entity "water_logs" as water_logs {
  * id : BIGINT PK
  * user_id : BIGINT FK
  * amount_ml : DECIMAL(8,2)
  * logged_at : TIMESTAMP
  created_at : TIMESTAMP
}

entity "daily_nutrition_summaries" as daily_nutrition_summaries {
  * id : BIGINT PK
  * user_id : BIGINT FK
  * date : DATE
  * target_calories : DECIMAL(6,2)
  * target_protein : DECIMAL(5,2)
  * target_carbs : DECIMAL(5,2)
  * target_fat : DECIMAL(5,2)
  consumed_calories : DECIMAL(6,2)
  consumed_protein : DECIMAL(5,2)
  consumed_carbs : DECIMAL(5,2)
  consumed_fat : DECIMAL(5,2)
  calories_burned : DECIMAL(6,2)
  water_consumed_ml : DECIMAL(8,2)
  target_water_ml : DECIMAL(8,2)
  remaining_calories : DECIMAL(6,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "medications" as medications {
  * id : UUID PK
  * user_id : BIGINT FK
  * name : VARCHAR(255)
  * dosage : VARCHAR(255)
  * type : ENUM
  * frequency : ENUM
  * start_date : DATE
  end_date : DATE
  is_active : BOOLEAN
  notes : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "medication_schedules" as medication_schedules {
  * id : UUID PK
  * medication_id : UUID FK
  * time : TIME
  is_active : BOOLEAN
  created_at : TIMESTAMP
}

entity "medication_logs" as medication_logs {
  * id : UUID PK
  * medication_id : UUID FK
  * scheduled_time : TIMESTAMP
  actual_time : TIMESTAMP
  * status : ENUM
  notes : TEXT
  created_at : TIMESTAMP
}

' Relationships
users ||--|| user_profiles : "has"
users ||--o{ conversations : "has"
conversations ||--o{ messages : "contains"
users ||--o{ diet_plans : "has"
diet_plans ||--o{ meals : "contains"
users ||--o{ food_logs : "logs"
food_logs ||--o{ food_items : "contains"
users ||--o{ exercise_logs : "logs"
users ||--o{ water_logs : "logs"
users ||--o{ daily_nutrition_summaries : "has"
users ||--o{ medications : "takes"
medications ||--o{ medication_schedules : "has"
medications ||--o{ medication_logs : "has"
@enduml
